@@ -4,7 +4,7 @@ parent_record ||= @record # TODO: remove when changing @record is removed, save 
 associated = column.singular_association? ? [parent_record.send(column.name)].compact : parent_record.send(column.name).to_a
 #associated = associated.sort_by {|r| r.new_record? ? 99999999999 : r.id} unless column.association.options.has_key?(:order)
 if column.show_blank_record?(associated)
-  show_blank_record = build_associated(column.association, parent_record)
+  show_blank_record = build_associated(column, parent_record)
 end
 disable_required_for_new = @disable_required_for_new
 @disable_required_for_new = !!show_blank_record unless (column.singular_association? && column.required?)
