@@ -1,4 +1,5 @@
-- add basic support for mongoid
+- add basic support for Mongoid
+- add support for associations between Mongoid and ActiveRecord with ActiveMongoid
 - use concerns for routes, deprecate as_routes method
 - add install generator
 - rails 5.0 support
